# myicub_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
Worlds/: World
config/: camera_config.xml  depth.rviz
docker/: Dockerfile  build_docker.bash  config.yaml  env_setup.bash  exec_icub.bash  requirements.txt  run_icub.bash
include/: js_interface.h
launch/: all_the_rest.launch  depth_proc.launch  icub_only.launch  start_world.launch
models/: World_scene
models/0-Scene/: model.config  model.sdf
models/0-Scene/materials/scripts/: scene.material
models/0-Table/: model.sdf
models/0-Table/materials/scripts/: table.material
models/0-Wall/: model.config  model.sdf
models/0-Wall/materials/scripts/: scene.material
models/0-Wall/meshes/: Wall.dae
models/0-Wreat/: model.config  model.sdf
models/0-Wreat/materials/scripts/: wreat.material
models/2-Can/: model.config  model.sdf
models/2-Can/materials/scripts/: can.material
models/2-Can/meshes/: Can.dae
models/3-Banana/: model.config  model.sdf
models/3-Banana/materials/scripts/: Banana.material
models/3-Banana/meshes/: Banana.dae
models/4-Egg/: model.config  model.sdf
models/4-Egg/materials/scripts/: Box.material
models/4-Egg/meshes/: Egg.dae
models/5-Box/: model.config  model.sdf
models/5-Box/materials/scripts/: Cube.material
models/5-Box/meshes/: Box.dae
models/6-Toy/: model.config  model.sdf
models/6-Toy/materials/scripts/: Toy.material
models/l_hand/: l_hand.sdf
models/l_leg/: l_leg.sdf
models/marker1/: model.sdf
models/marker2/: model.sdf
models/marker3/: model.sdf
models/marker4/: model.sdf
models/marker5/: model.sdf
models/marker6/: model.sdf
models/marker7/: model.sdf
models/myicub/: model.config  myicub.sdf
models/myicub_fixed/: model.config  myicub_fixed.sdf
models/r_hand/: r_hand.sdf
models/r_leg/: r_leg.sdf
models/realsense_camera/: model.sdf
msg/: CameraFeatures.msg  Markers.msg
scripts/: camera_yarpinterface.py  cartesian_mapping_node.py  detector_rosinterface.py  gazebo_trick.py  head_rotate.py  look_around.py
scripts/detector/: .gitignore  README.MD  class_detector.py  detect.py  detect_video_class.py  fix_class_id.py  script.py  test.py  train.py
scripts/detector/data/: hyp.scratch.yaml
scripts/detector/dataset_files/: Banana.txt  Box.txt  Can.txt  Cube.txt  Egg.txt  Toy.txt
scripts/detector/models/: common.py  experimental.py  yolo.py
scripts/detector/utils/: batch_renorm.py  data_loader.py  datasets.py  external_memory.py  general.py
scripts/planner/Catkin/: CMakeLists.txt  PositionControlMatlab.cpp  PositionControlMatlab.h  package.xml
scripts/planner/Matlab/: Config_space.m  RRT_star_c_space.m  isCollision.m  isCollisionC.m  islands_finder.m  manipulator.m  steer3d.m  trajectory_intrpolation.m  volume_divider.m  workspace_and_wall_sd.m
src/: ar_detector_node.cpp  js_interface.cpp
srv/: StateCommand.srv
worlds/: demo_day_two.world  icub_only.world
